--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div style="font-size: xx-small; font-family: monospace; background:rgb(247, 239, 247); padding-inline-start: 2%;"><h1>A Note Taking App by <a href="https://github.com/Sujitpandey1409" target="_blank" rel="noopener noreferrer">Sujit Pandey</a></h1></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
